--- a/public/sass/base/_typography.scss
+++ b/public/sass/base/_typography.scss
@@ -142,15 +142,15 @@
 		padding: (_size(element-margin) / 4) 0 (_size(element-margin) / 4) _size(element-margin);
 	}
 
-	code {
-		background: _palette(border-bg);
-		border-radius: _size(border-radius);
-		border: solid _size(border-width) _palette(border);
-		font-family: _font(family-fixed);
-		font-size: 0.9em;
-		margin: 0 0.25em;
-		padding: 0.25em 0.65em;
-	}
+	//code {
+	//	background: _palette(border-bg);
+	//	border-radius: _size(border-radius);
+	//	border: solid _size(border-width) _palette(border);
+	//	font-family: _font(family-fixed);
+	//	font-size: 0.9em;
+	//	margin: 0 0.25em;
+	//	padding: 0.25em 0.65em;
+	//}
 
 	pre {
 		-webkit-overflow-scrolling: touch;
@@ -158,12 +158,12 @@
 		font-size: 0.9em;
 		margin: 0 0 _size(element-margin) 0;
 
-		code {
-			display: block;
-			line-height: 1.75;
-			padding: 1em 1.5em;
-			overflow-x: auto;
-		}
+		//code {
+		//	display: block;
+		//	line-height: 1.75;
+		//	padding: 1em 1.5em;
+		//	overflow-x: auto;
+		//}
 	}
 
 	hr {
